Color button spacing fixed

--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,9 @@
     transform: rotate(360deg);
   }
 }
+
+.color-button {
+  width: 48;
+  height: 48;
+  vertical-align: bottom
+}
